🌍 ONE Simulator