@@ -19,15 +19,15 @@ import core.Settings;
  *
  */
 public class SprayAndWaitRouter extends ActiveRouter {
-	/** identifier for the initial number of copies setting ({@value})*/
+	/** identifier for the initial number of copies setting ({@value}) */
 	public static final String NROF_COPIES = "nrofCopies";
-	/** identifier for the binary-mode setting ({@value})*/
+	/** identifier for the binary-mode setting ({@value}) */
 	public static final String BINARY_MODE = "binaryMode";
-	/** SprayAndWait router's settings name space ({@value})*/
+	/** SprayAndWait router's settings name space ({@value}) */
 	public static final String SPRAYANDWAIT_NS = "SprayAndWaitRouter";
 	/** Message property key */
 	public static final String MSG_COUNT_PROPERTY = SPRAYANDWAIT_NS + "." +
-		"copies";
+			"copies";
 
 	protected int initialNrofCopies;
 	protected boolean isBinary;
@@ -37,11 +37,12 @@ public class SprayAndWaitRouter extends ActiveRouter {
 		Settings snwSettings = new Settings(SPRAYANDWAIT_NS);
 
 		initialNrofCopies = snwSettings.getInt(NROF_COPIES);
-		isBinary = snwSettings.getBoolean( BINARY_MODE);
+		isBinary = snwSettings.getBoolean(BINARY_MODE);
 	}
 
 	/**
 	 * Copy constructor.
+	 * 
 	 * @param r The router prototype where setting values are copied from
 	 */
 	protected SprayAndWaitRouter(SprayAndWaitRouter r) {
@@ -58,15 +59,14 @@ public class SprayAndWaitRouter extends ActiveRouter {
 	@Override
 	public Message messageTransferred(String id, DTNHost from) {
 		Message msg = super.messageTransferred(id, from);
-		Integer nrofCopies = (Integer)msg.getProperty(MSG_COUNT_PROPERTY);
+		Integer nrofCopies = (Integer) msg.getProperty(MSG_COUNT_PROPERTY);
 
 		assert nrofCopies != null : "Not a SnW message: " + msg;
 
 		if (isBinary) {
 			/* in binary S'n'W the receiving node gets floor(n/2) copies */
-			nrofCopies = (int)Math.floor(nrofCopies/2.0);
-		}
-		else {
+			nrofCopies = (int) Math.floor(nrofCopies / 2.0);
+		} else {
 			/* in standard S'n'W the receiving node gets only single copy */
 			nrofCopies = 1;
 		}
@@ -80,7 +80,7 @@ public class SprayAndWaitRouter extends ActiveRouter {
 		makeRoomForNewMessage(msg.getSize());
 
 		msg.setTtl(this.msgTtl);
-		msg.addProperty(MSG_COUNT_PROPERTY, new Integer(initialNrofCopies));
+		msg.addProperty(MSG_COUNT_PROPERTY, Integer.valueOf(initialNrofCopies));
 		addToMessages(msg, true);
 		return true;
 	}
@@ -110,15 +110,16 @@ public class SprayAndWaitRouter extends ActiveRouter {
 	/**
 	 * Creates and returns a list of messages this router is currently
 	 * carrying and still has copies left to distribute (nrof copies > 1).
+	 * 
 	 * @return A list of messages that have copies left
 	 */
 	protected List<Message> getMessagesWithCopiesLeft() {
 		List<Message> list = new ArrayList<Message>();
 
 		for (Message m : getMessageCollection()) {
-			Integer nrofCopies = (Integer)m.getProperty(MSG_COUNT_PROPERTY);
+			Integer nrofCopies = (Integer) m.getProperty(MSG_COUNT_PROPERTY);
 			assert nrofCopies != null : "SnW message " + m + " didn't have " +
-				"nrof copies property!";
+					"nrof copies property!";
 			if (nrofCopies > 1) {
 				list.add(m);
 			}
@@ -146,12 +147,11 @@ public class SprayAndWaitRouter extends ActiveRouter {
 		}
 
 		/* reduce the amount of copies left */
-		nrofCopies = (Integer)msg.getProperty(MSG_COUNT_PROPERTY);
+		nrofCopies = (Integer) msg.getProperty(MSG_COUNT_PROPERTY);
 		if (isBinary) {
 			/* in binary S'n'W the sending node keeps ceil(n/2) copies */
-			nrofCopies = (int)Math.ceil(nrofCopies/2.0);
-		}
-		else {
+			nrofCopies = (int) Math.ceil(nrofCopies / 2.0);
+		} else {
 			nrofCopies--;
 		}
 		msg.updateProperty(MSG_COUNT_PROPERTY, nrofCopies);
